car filter for comparision
