# storage/docs/api-docs.json
@@ -2240,6 +2240,13 @@
                         "description": "Filter by Car, CSV 1,2,3",
                         "required": false,
                         "type": "string"
+                    },
+                    {
+                        "name": "model_name",
+                        "in": "query",
+                        "description": "Filter by Car model name",
+                        "required": false,
+                        "type": "string"
                     }
                 ],
                 "responses": {
